<resources>
    <string name="app_name">EggClock</string>
    <string name="title_activity_main">Vælg Æg</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="choose_egg">Vælg Æg</string>
    <string name="soft_boiled">Blødkogte</string>
    <string name="smiling">Smilende</string>
    <string name="hard_boiled">Hårdkogte</string>
    <string name="time_left">00:00</string>
    <string name="start">start</string>
</resources>