<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EggClock"
    android:orientation="vertical"
    android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"
            android:gravity="center"
            android:textSize="40sp"
            android:text="@string/choose_egg"
            android:background="?attr/colorPrimary"
            android:textColor="@color/white"
            android:padding="10dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center|top"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                style="?android:attr/buttonBarStyle"
                >
                <ImageButton
                    android:id="@+id/soft_egg_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_soft"

                    android:text="@string/soft_boiled"
                    android:contentDescription="@string/soft_boiled"
                    style="?android:attr/buttonBarButtonStyle"
                    android:gravity="start|center"
                    android:onClick="softBoiledClick" />
                <ImageButton
                    android:id="@+id/medium_egg_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_medium"

                    android:text="@string/smiling"
                    android:gravity="center"
                    style="?android:attr/buttonBarButtonStyle"
                    android:onClick="smilingClick" />

                <ImageButton
                    android:id="@+id/hard_egg_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_hard"

                    android:text="@string/hard_boiled"
                    android:gravity="end|center"
                    android:onClick="hardBoiledClick"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>
            <TextView
                android:textSize="90sp"
                android:id="@+id/timer_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/time_left"
                android:gravity="center">

            </TextView>

            <Button
                android:id="@+id/starting_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:enabled="false"
                android:onClick="startClock"
                android:text="@string/start" />
        </LinearLayout>

    </LinearLayout>

